Added reserve and team

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 </ng-select>
 
 <button (click)="addToTeam()">Add to team</button>
-<button (click)="addToBox()">Add to box</button>
+<button (click)="addToReserve()">Add to reserve</button>
