Fixed color for buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,10 +123,10 @@
               <mat-card-subtitle class="level">
                 <div *ngIf="!pokemon.editLevel">
                   <span (click)="pokemon.editLevel = true">N.{{ pokemon.level }}</span>
-                  <button mat-icon-button color="accent" (click)="addLevel(pokemon, 'reserve')" class="level-button">
+                  <button mat-icon-button color="basic" (click)="addLevel(pokemon, 'reserve')" class="level-button">
                     <mat-icon>add_circle</mat-icon>
                   </button>
-                  <button mat-icon-button color="accent" (click)="removeLevel(pokemon, 'reserve')" class="level-button">
+                  <button mat-icon-button color="basic" (click)="removeLevel(pokemon, 'reserve')" class="level-button">
                     <mat-icon>remove_circle</mat-icon>
                   </button>
                 </div>
@@ -176,10 +176,10 @@
               <mat-card-subtitle class="level">
                 <div *ngIf="!pokemon.editLevel">
                   <span (click)="pokemon.editLevel = true">N.{{ pokemon.level }}</span>
-                  <button mat-icon-button color="accent" (click)="addLevel(pokemon, 'cemetery')" class="level-button">
+                  <button mat-icon-button color="basic" (click)="addLevel(pokemon, 'cemetery')" class="level-button">
                     <mat-icon>add_circle</mat-icon>
                   </button>
-                  <button mat-icon-button color="accent" (click)="removeLevel(pokemon, 'cemetery')" class="level-button">
+                  <button mat-icon-button color="basic" (click)="removeLevel(pokemon, 'cemetery')" class="level-button">
                     <mat-icon>remove_circle</mat-icon>
                   </button>
                 </div>
