session deletion and removed duplicates

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,6 +28,10 @@
   align-items: center;
 }
 
+#delete-session {
+  color: darkred;
+}
+
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
