--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,12 @@
         <mat-icon>content_copy</mat-icon>
       </button>
       <button mat-stroked-button (click)="closeSession()">Close session</button>
+      <button mat-icon-button [matMenuTriggerFor]="sessionMenu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #sessionMenu="matMenu">
+        <button mat-menu-item id="delete-session" (click)="deleteSession()">Delete session</button>
+      </mat-menu>
     </div>
   </section>
 
